# queue-assignment

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: calculator.h  queue.h
src/: calculator.c  main.c
test/: test_calculator.c
